# cosmic-moment

./: CHANGELOG.md  README.md  domains.yaml  mkdocs.yml  pyproject.toml
docs/: cli.md  index.md
src/cosmic_moment/: __init__.py  cli.py  core.py  entropy_table_bridge.py
tests/: test_cli.py  test_core.py
