[project]
name = "cosmic-moment"
version = "0.3.1"
description = "Discrete moments of cosmic emergence – the singular points where modulated entropy duality collapses into conscious frames."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GenesisAeon Team", email = "team@genesisaeon.org"}]
keywords = ["entropy", "emergence", "cosmology", "modulation", "consciousness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "medium-modulation>=0.1.0",
    "entropy-governance>=0.1.0",
    "entropy-table>=1.0.1",
    "implosive-genesis>=0.4.0",
    "sympy>=1.13.0",
    "numpy>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9"]
docs = ["mkdocs>=1.6", "mkdocstrings[python]>=0.27", "mkdocs-material>=9.6"]

[project.scripts]
cm = "cosmic_moment.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/cosmic-moment"
Issues = "https://github.com/GenesisAeon/cosmic-moment/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmic_moment"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cosmic_moment --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

